# chisel

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  SECURITY.md
solder-core/: Cargo.toml
solder-core/src/: error.rs  traits.rs  zero_copy.rs
solder-derive/: Cargo.toml
solder-derive/src/: expand.rs  layout.rs  lib.rs
src/: associated_token.rs  lib.rs  token.rs
tests/: compat_tests.rs  layout_tests.rs  zero_copy_tests.rs
